# QuimeraTech

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.kernel  Dockerfile.sandbox  INSTRUCOES_TERMUX.md  KERNEL.md  MANIFESTO.md  Makefile  QUICKSTART.md  README.md  VALIDATION_REPORT.md  alembic.ini  bandit.yaml  docker-compose.monitoring.yml  docker-compose.yml  manifesto_quimera.json  prometheus.yml  pyproject.toml  quimera.sh  requirements.txt  requirements_minimal.txt  requirements_termux.txt  setup.py  setup_model.sh  setup_modelo.sh
.github/workflows/: ci.yml  release.yml
grafana/dashboards/: quimera-overview.json
logs/: engineering_kb.json  engineering_memory.jsonl  live_catalog.json  source_catalog.json
quimera/: DEMO_MULTI_AMBIENTE.py  DEMO_SOLUCAO_FINAL.py  TESTE_INTEGRACAO_FINAL.py  __init__.py  __main__.py  analisar_quimera.py  analyze_quimera_docs.py  asan_validator.py  ast_patcher.py  brain.py  build_integration.py  candidate_generator.py  candidate_ranker.py  check_langchain_versions.py  cli.py  compare_llm.py  config.py  correlation_engine.py  data_flow_analyzer.py  deep_investigation.py  detection_engine.py  engineer.py  engineer_iterative.py  engineering_assistant.py  engineering_memory.py  evidence_score.py  exceptions.py  executar_quimera.py  exemplo_funcionamento.py  exemplo_indexacao_github.py  fix_langchain_conflicts.py  hybrid_detector.py  hypothesis_builder.py  init_aegis_plugin.py  instalar_quimera_completo.py  install_aegis.py  kernel_sandbox.py  knowledge_acquisition.py  knowledge_broker.py  launcher_seguro.py  (+45 more)
quimera/aegis/: __init__.py  action_selector.py  action_selector_pattern.py  aegis_agent.py  aegis_core.py  aegis_dashboard.py  aegis_plugin.py  audit_provenance_system.py  behavior_analyzer.py  crypto_engine.py  defensive_tokens.py  demo_aegis.py  demo_integration.py  dual_llm_pattern.py  false_positive_filter.py  integrity_monitor.py  malware_detector.py  multi_phase_validation.py  plan_execute_pattern.py  polymorphic_prompts.py  ppa_system.py  sentinel.py  validation_pipeline.py  xai_explainability.py
quimera/aegisNative/: secure_stubs.py
quimera/agentes/: agente_analista.py  agente_analista_mult.py  agente_autocorrecao.py  agente_base.py  agente_configurador.py  agente_critico.py  agente_de_fallback.py  agente_estrategista.py  agente_evolutivo_de_codigo.py  agente_fiscal_codigo.py  agente_gerador.py  agente_gestao_rollback.py  agente_historico.py  agente_kan.py  agente_mestra.py  agente_quantico.py  agente_sintetizador.py  agente_transformador.py  agente_votoaste.py  coevolution_engine.py  genetic_patch_engine.py  refinador_v4.py  roteador_modelos.py  self_healing_loop.py  z3_analyst.py
quimera/analise_codigo/: __init__.py  code_quality_analyzer.py
quimera/analysis/: advanced_ast_parser.py
quimera/api/: __init__.py  dashboard.py  mission_queue.py  run.py  schemas.py  server.py  task_runner.py  worker.py
quimera/bibliotecario/: __init__.py  biblioteca_alexandria.py  cognitive_librarian_ultra_advanced.py  multi_llm_orchestrator.py  scanner_avancado.py
quimera/cognition/: __init__.py  context_coordinator.py  engineering_kb.py  groq_assistant.py  hybrid_assistant.py  intent_interpreter.py  knowledge_indexer.py  local_ai.py  local_assistant.py  project_context.py  project_context_v2.py  project_intelligence.py  quimera_knowledge.json  quimera_system_prompt.txt
quimera/core/: __init__.py  advanced_rag.py  ast_plus_safe_vetor.py  ast_utils.py  embeddings.py  env_config.py  formal_verification_pipeline.py  kan_engine.py  knowledge_base.py  learning_loop.py  llm_kernel.py  local_model_manager.py  model_router.py  orquestrador_unificado.py  plugin_framework.py  retrieval_engine.py  security_orchestrator.py  vector_manager.py
quimera/db/: __init__.py  base.py  init_db.py  models.py  persistence.py  schemas.py  service.py  session.py  util_migrations.py  utils.py
quimera/distributed/: __init__.py  api_gateway.py  orchestrator.py  run.py  scaler.py  tenant_manager.py
quimera/documentacao/: __init__.py  documentation_generator.py
quimera/evolucao/: __init__.py  agent_reputation.py  continuous_learning.py  dispatcher.py  execution_planner.py  strategy_selector.py
quimera/evolution/: __init__.py  backup_manager.py  evo_core.py  fitness_engine.py  proposal_authority.py  strategy_catalog.py  validation_gate.py
quimera/features/: business_intelligence.py  collaboration_system.py  dashboard_3d.py  gamification_system.py  ide_integration.py  multi_language_analyzer.py
quimera/ferramentas/: __init__.py  device_scanner.py  scanner_avancado.py
quimera/horizons/: __init__.py
quimera/integration_backends/: __init__.py  angr_wrapper.py  cb_wrapper.py  clarabel_wrapper.py  ebpf_verifier.py  fuzzing_engine.py  hypermapper_wrapper.py  llm_debugger.py  multi_llm_orchestrator.py  openllm_local.py  red_team.py  redqueen_fuzzer.py  z3_wrapper.py
quimera/interfaces/: __init__.py
quimera/kernel/: __init__.py  gestor.py
quimera/logs/: __init__.py  metrics.py  observability.py  parser.py  structured_logger.py
quimera/mab/: __init__.py  mab.py
quimera/memory/: __init__.py  cross_kernel.py  dashboard.py  federated.py  integration.py  memory_engine.py  vector_store.py
quimera/mind/: __init__.py  agent_registry.py  api_router.py  autonomous_engine.py  codebase_knowledge.py  core.py  full_knowledge.py  llm_adviser.py  parallel_executor.py  planner.py  reputation_engine.py  self_awareness.py
quimera/ml/: recommender.py
quimera/performance/: __init__.py  performance_profiling_engine.py
quimera/plugins/: __init__.py  base_plugin.py  go_agent.py  multi_lang_orchestrator.py  plugin_manager.py  plugin_sdk.py  python_agent.py  rust_agent.py
quimera/refatoracao/: __init__.py  intelligent_refactoring_engine.py
quimera/sandbox/: __init__.py  backend_interface.py  manager.py  result.py
quimera/scripts/: production_system.py  run_test_battery.py
test_battery/: level1_trivial.c  level2_easy.c  level3_medium.c  level4_hard.c  level5_extreme.c  level6_impossible.c
(+99 files in other folders)
