[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quimera-unified"
version = "2.0.0"
description = "Sistema Quimera Unificado com Oraculo de Alexandria - Plataforma de analise, correcao e evolucao de codigo"
authors = ["Quimera Team <team@quimera.dev>"]
readme = "README.md"
packages = [{include = "quimera"}]

[tool.poetry.dependencies]
python = "^3.11"

# === Core Dependencies ===
python-dotenv = "^1.0.0"
requests = "^2.28.0"
aiohttp = "^3.8.0"
pygments = "^2.0.0"
click = "^8.1.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"
jsonschema = "^4.17.0"
packaging = "^23.0"
typer = "^0.9.0"
rich = "^13.0.0"

# Databases essenciais
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"

# Git essencial
GitPython = "^3.1.30"

# LLM Core
openai = "^1.0.0"
anthropic = "^0.8.0"
tiktoken = "^0.8.0"

# Document Processing
beautifulsoup4 = "^4.11.0"
markdown = "^3.4.0"

# Data basico
pandas = "^2.0.0"
numpy = "^1.24.0"

# === Dependencias Optional ===

# System utilities
psutil = {version = "^5.9.0", optional = true}
watchdog = {version = "^3.0.0", optional = true}

# Async Support
asyncio-mqtt = {version = "^0.13.0", optional = true}

# Advanced data
scipy = {version = ">=1.8.0", optional = true}

# Git avancado
httpx = {version = "^0.28.1", optional = true}
python-slugify = {version = "^8.0.4", optional = true}

# Document processing avancado
PyPDF2 = {version = "^3.0.1", optional = true}
python-docx = {version = "^1.2.0", optional = true}

# GitHub
PyGithub = {version = "^1.58.0", optional = true}

# Machine Learning
scikit-learn = {version = "^1.3.0", optional = true}
joblib = {version = "^1.3.0", optional = true}

# LLM Framework (com upper bounds fixados)
langchain = {version = "^0.3.0,<0.4.0", optional = true}
langchain-core = {version = "^0.3.0,<0.4.0", optional = true}
langchain-community = {version = "^0.3.0,<0.4.0", optional = true}
cohere = {version = ">=5.0.0", optional = true}

# LLM Providers
langchain-openai = {version = "^0.2.0", optional = true}
langchain-groq = {version = "^0.2.0", optional = true}
langchain-google-genai = {version = "^2.0.0", optional = true}
langchain-cohere = {version = "^0.3.0", optional = true}
langchain-cloudflare = {version = "^0.1.0", optional = true}
langchain-mistralai = {version = "^0.2.0", optional = true}
langchain-together = {version = "^0.2.0", optional = true}
cerebras-cloud-sdk = {version = ">=0.1.0", optional = true}

# Local ML (com upper bounds fixados)
torch = {version = ">=1.12.0,<3.0.0", optional = true}
transformers = {version = ">=4.20.0,<5.0.0", optional = true}
accelerate = {version = ">=0.20.0", optional = true}
onnxruntime = {version = ">=1.14.0", optional = true}
llama-cpp-python = {version = ">=0.2.0", optional = true}
optimum = {version = ">=1.12.0", optional = true}

# RAG e Embeddings
sentence-transformers = {version = ">=2.2.0", optional = true}
faiss-cpu = {version = ">=1.7.4", optional = true}
chromadb = {version = ">=0.4.0", optional = true}
llama-index = {version = ">=0.1.0", optional = true}
llama-index-embeddings-huggingface = {version = ">=0.1.0", optional = true}
llama-index-vector-stores-chroma = {version = ">=0.1.0", optional = true}
llama-index-llms-langchain = {version = ">=0.1.0", optional = true}

# Interface (com upper bounds fixados)
gradio = {version = ">=4.0.0,<6.0.0", optional = true}
streamlit = {version = ">=1.28.0", optional = true}
plotly = {version = ">=5.17.0", optional = true}
matplotlib = {version = ">=3.7.0", optional = true}
seaborn = {version = ">=0.12.0", optional = true}

# Web framework (usados em quimera_plugin_interface.py)
flask = {version = ">=2.3.0", optional = true}
flask-cors = {version = ">=4.0.0", optional = true}
flask-socketio = {version = ">=5.3.0", optional = true}

# Cache
redis = {version = ">=4.5.0", optional = true}
hiredis = {version = ">=2.2.0", optional = true}

# Code Analysis
pylint = {version = ">=2.17.0", optional = true}
autopep8 = {version = ">=2.0.0", optional = true}
bandit = {version = ">=1.7.0", optional = true}

# Web Scraping
selenium = {version = ">=4.15.0", optional = true}
playwright = {version = ">=1.40.0", optional = true}
scrapy = {version = ">=2.11.0", optional = true}

# Advanced Processing
clarabel = {version = ">=0.6.0", optional = true}
z3-solver = {version = ">=4.12.0", optional = true}
pycparser = {version = ">=2.21", optional = true}

# Tree-sitter
tree-sitter = {version = ">=0.19.0", optional = true}
tree-sitter-python = {version = ">=0.19.0", optional = true}
tree-sitter-javascript = {version = ">=0.19.0", optional = true}
tree-sitter-cpp = {version = ">=0.19.0", optional = true}

# Development
ipython = {version = ">=8.5.0", optional = true}
jupyter = {version = ">=1.0.0", optional = true}
pre-commit = {version = ">=3.0.0", optional = true}
pytest-asyncio = {version = ">=0.21.0", optional = true}
pytest-cov = {version = ">=4.0.0", optional = true}
pytest-mock = {version = ">=3.10.0", optional = true}

# Monitoring
prometheus-client = {version = ">=0.17.0", optional = true}
structlog = {version = ">=23.0.0", optional = true}
sentry-sdk = {version = ">=1.32.0", optional = true}

# Security
cryptography = {version = ">=41.0.0", optional = true}
pyjwt = {version = ">=2.8.0", optional = true}
bcrypt = {version = ">=4.0.0", optional = true}

# Performance
uvloop = {version = ">=0.17.0", optional = true}
cython = {version = ">=3.0.0", optional = true}
numba = {version = ">=0.57.0", optional = true}

# Multimodal
pillow = {version = ">=10.0.0", optional = true}
opencv-python = {version = ">=4.8.0", optional = true}
librosa = {version = ">=0.10.0", optional = true}
torchvision = {version = ">=0.15.0", optional = true}
torchaudio = {version = ">=2.0.0", optional = true}

# Graph & Analysis
networkx = {version = ">=3.0", optional = true}
memory-profiler = {version = ">=0.61.0", optional = true}
graphviz = {version = ">=0.21", optional = true}

# Utilities
tenacity = {version = ">=8.2.0", optional = true}
diskcache = {version = ">=5.6.0", optional = true}
astunparse = {version = ">=1.6.3", optional = true}
astor = {version = ">=0.8.1", optional = true}
textstat = {version = ">=0.7.7", optional = true}
hypothesis = {version = ">=6.135.26", optional = true}
chardet = {version = ">=5.2.0", optional = true}
loguru = {version = ">=0.7.0", optional = true}

# Storage & Serialization
zstandard = {version = ">=0.20.0", optional = true}
protobuf = {version = "3.20.3", optional = true}
toml = {version = ">=0.10.2", optional = true}
orjson = {version = ">=3.10.18", optional = true}

[tool.poetry.extras]
# Grupo LLM Completo
llm_full = [
    "langchain", "langchain-core", "langchain-community",
    "langchain-openai", "langchain-groq", "langchain-google-genai",
    "langchain-cohere", "langchain-cloudflare", "langchain-mistralai",
    "langchain-together", "cerebras-cloud-sdk", "cohere"
]

# Grupo LLM Local
llm_local = [
    "torch", "transformers", "accelerate", "onnxruntime",
    "llama-cpp-python", "optimum"
]

# Grupo RAG Semantico
rag_semantic = [
    "sentence-transformers", "faiss-cpu", "chromadb",
    "llama-index", "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-chroma", "llama-index-llms-langchain"
]

# Grupo Interface
interface = [
    "gradio", "streamlit", "plotly", "matplotlib", "seaborn"
]

# Grupo Web Framework
web_framework = [
    "flask", "flask-cors", "flask-socketio"
]

# Grupo Cache
redis_cache = [
    "redis", "hiredis"
]

# Grupo Analise de Codigo
lint_analysis = [
    "pylint", "autopep8", "bandit"
]

# Grupo Web Scraping
web_scraping = [
    "selenium", "playwright", "scrapy"
]

# Grupo Processamento Avancado
advanced_processing = [
    "clarabel", "z3-solver", "pycparser"
]

# Grupo Tree-sitter
tree_sitter = [
    "tree-sitter", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-cpp"
]

# Grupo Desenvolvimento
development = [
    "ipython", "jupyter", "pre-commit",
    "pytest-asyncio", "pytest-cov", "pytest-mock"
]

# Grupo Monitoramento
monitoring = [
    "prometheus-client", "structlog", "sentry-sdk"
]

# Grupo Seguranca
security = [
    "cryptography", "pyjwt", "bcrypt"
]

# Grupo Performance
performance = [
    "uvloop", "cython", "numba"
]

# Grupo Multimodal
multimodal = [
    "pillow", "opencv-python", "librosa", "torchvision", "torchaudio"
]

# (data_science e documents removidos - pandas/numpy/markdown/bs4 sao obrigatorios,
#  scipy/sklearn/joblib/PyPDF2/python-docx disponiveis via full ou individualmente)

# Grupo GitHub
github = [
    "PyGithub", "httpx", "python-slugify"
]

# Grupo Grafo e Analise
graph_analysis = [
    "networkx", "memory-profiler", "graphviz"
]

# Grupo Utilidades Core
utilities_core = [
    "tenacity", "diskcache", "loguru",
    "astunparse", "astor", "textstat",
    "hypothesis", "chardet"
]

# Grupo System
system = [
    "psutil", "watchdog"
]

# Grupo Storage
storage = [
    "zstandard", "protobuf", "toml", "orjson"
]

# Meta-grupos
ai_complete = [
    "langchain", "langchain-core", "langchain-community",
    "langchain-openai", "langchain-groq", "langchain-google-genai",
    "langchain-cohere", "langchain-cloudflare", "langchain-mistralai",
    "langchain-together", "cerebras-cloud-sdk", "cohere",
    "torch", "transformers", "accelerate", "onnxruntime",
    "llama-cpp-python", "optimum",
    "sentence-transformers", "faiss-cpu", "chromadb",
    "llama-index", "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-chroma", "llama-index-llms-langchain"
]

web_complete = [
    "gradio", "streamlit", "plotly", "matplotlib", "seaborn",
    "selenium", "playwright", "scrapy", "beautifulsoup4",
    "flask", "flask-cors", "flask-socketio"
]

dev_complete = [
    "ipython", "jupyter", "pre-commit",
    "pytest-asyncio", "pytest-cov", "pytest-mock",
    "pylint", "autopep8", "bandit",
    "tree-sitter", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-cpp"
]

production = [
    "redis", "hiredis",
    "prometheus-client", "structlog", "sentry-sdk",
    "cryptography", "pyjwt", "bcrypt",
    "uvloop", "cython", "numba",
    "psutil", "watchdog", "tenacity", "diskcache", "loguru"
]

# Instalacao completa (todas as funcionalidades)
full = [
    "langchain", "langchain-core", "langchain-community",
    "langchain-openai", "langchain-groq", "langchain-google-genai",
    "langchain-cohere", "langchain-cloudflare", "langchain-mistralai",
    "langchain-together", "cerebras-cloud-sdk", "cohere",
    "torch", "transformers", "accelerate", "onnxruntime",
    "llama-cpp-python", "optimum",
    "sentence-transformers", "faiss-cpu", "chromadb",
    "llama-index", "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-chroma", "llama-index-llms-langchain",
    "gradio", "streamlit", "plotly", "matplotlib", "seaborn",
    "selenium", "playwright", "scrapy", "beautifulsoup4",
    "flask", "flask-cors", "flask-socketio",
    "ipython", "jupyter", "pre-commit",
    "pytest-asyncio", "pytest-cov", "pytest-mock",
    "pylint", "autopep8", "bandit",
    "tree-sitter", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-cpp",
    "redis", "hiredis",
    "prometheus-client", "structlog", "sentry-sdk",
    "cryptography", "pyjwt", "bcrypt",
    "uvloop", "cython", "numba",
    "pillow", "opencv-python", "librosa", "torchvision", "torchaudio",
    "scipy", "scikit-learn", "joblib",
    "PyPDF2", "python-docx",
    "PyGithub", "httpx", "python-slugify",
    "networkx", "memory-profiler", "graphviz",
    "tenacity", "diskcache", "loguru",
    "astunparse", "astor", "textstat", "hypothesis", "chardet",
    "zstandard", "protobuf", "toml", "orjson",
    "clarabel", "z3-solver", "pycparser"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
faker = "^37.4.0"

[tool.poetry.scripts]
quimera = "quimera.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["quimera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ""
